--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#bcffa3"
-secondaryBackgroundColor="#9dadce"
-textColor="#262730"
+primaryColor="#c39a1c"
+backgroundColor="#432068"
+secondaryBackgroundColor="#432068"
+textColor="#c39a1c"
 font="sans serif"
